<resources>
    <string name="app_name">My Homework</string>
    <string name="hello">Hello</string>
    <string name="april">april</string>
    <string name="flower">flower</string>
    <string name="search">Search</string>
    <string name="genres">Genres</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="action">Action</string>
    <string name="thriller">Thriller</string>
    <string name="romantic">Romantic</string>
    <string name="horror">Horror</string>
    <string name="the_journey_begins_with_your_favourite_character">The journey begins with your favourite character</string>
    <string name="create">Create</string>
    <string name="i_have_my_account">I have my account</string>
    <string name="come_and_create_your_account">Come and create your account</string>
    <string name="welcome_to_movieview">Welcome to MovieView</string>
    <string name="your_name">Your name</string>
    <string name="code">Code</string>
    <string name="welcome_back">Welcome back</string>
    <string name="click_it">Click it</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="your_name">Your name</string>
    <string name="click_it">Click it</string>
    <string name="will_you_join_us">Will you join us?</string>
    <string name="robotboy">robotboy</string>
    <string name="john_davis12">john_davis12</string>
    <string name="pinky_pie">pinky_pie</string>
    <string name="_12_watching">12 watching</string>
    <string name="_230_watchers">230 watchers</string>
    <string name="my_favourite_movie_is_war_and_piece">My favourite movie is War and Piece</string>
    <string name="no_movie_added_here">No movie added here...</string>
    <string name="movieview">MovieView</string>
    <string name="pinky_pie">pinky_pie</string>
    <string name="movieview">MovieView</string>
    <string name="pinky_pie">pinky_pie</string>
    <string name="robotboy">robotboy</string>
    <string name="john_davis12">john_davis12</string>
</resources>