<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity7">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="9dp"
        android:text="@string/movieview"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView23"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/pinky_pie"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/robotboy"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/john_davis12"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView15"
        app:layout_constraintStart_toEndOf="@+id/imageView17" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="411dp"
        android:layout_height="195dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:srcCompat="@drawable/photo1633847356__1_" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="424dp"
        android:layout_height="195dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1633847356" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="370dp"
        android:layout_height="105dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1633847356__2_" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:srcCompat="@drawable/photo1633847356__6_" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@drawable/photo1633847356__6_" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/photo1633847356__6_" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="34dp"
        android:layout_height="25dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/photo1633847357__2_" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="34dp"
        android:layout_height="25dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView20"
        app:srcCompat="@drawable/photo1633847356__9_" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="34dp"
        android:layout_height="25dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:srcCompat="@drawable/photo1633847356__5_" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1633853736__1_" />



</androidx.constraintlayout.widget.ConstraintLayout>